# Football-predictor

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  tools.ps1  user.md
.github/: copilot-instructions.md
.github/scripts/: check_telegram_consistency.py  odds_predict.py  send_telegram_report.py  validate_training_data.py
.github/workflows/: ci.yml  daily-train.yml  pipeline-one-shot.yml  scheduled-backtest.yml  scheduled-hkjc.yml  scheduled-live.yml  scheduled-optimize.yml
artifacts/: debug_hkjc_hdc_page.html  model_bundle.pkl
config/: data_retention_policy.yml  feature_fields.json
notebooks/: README.md
scripts/: README.md  dev.ps1  extract_gql.py  hkjc_cron_collect.py  hkjc_daily_collect.py  hkjc_market_features.py  inspect_hkjc_requests.py  phase6_acceptance.ps1  probe_combo.py  probe_combo2.py  probe_final.py  probe_fopool.py  probe_gql.py  probe_hkjc.py  probe_hkjc_injury_schema.py  probe_lines.py  probe_matches.py  probe_poolinfo.py  probe_schema.py  probe_schema2.py  probe_ssr.py  probe_subtypes.py  railway_start.ps1
src/: __init__.py  main.py
tests/: test_backtest.py  test_bankroll.py  test_cli_flip_override.py  test_features.py  test_hkjc_side_flip.py  test_live_dashboard_proxy_monitor.py  test_live_injury_flow.py  test_model_pipeline.py  test_optimizer.py  test_phase4_metrics.py  test_phase6_live_cli.py  test_phase6_scaffold.py  test_proxy_feature_monitor.py  test_real_data_provider.py  test_schema_import.py  test_settlement.py  test_smoke_cli.py  test_telegram_alert.py
(+498 files in other folders)
