[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-predictor"
version = "0.1.0"
description = "HKJC-oriented football handicap research and execution framework"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Local Research User" }]
dependencies = [
  "typer>=0.12.3",
  "pandas==2.2.3",
  "numpy==2.2.6",
  "scikit-learn==1.5.2",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "SQLAlchemy>=2.0.31",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "xgboost>=2.1.1",
  "lightgbm>=4.5.0",
  "playwright>=1.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
